[gd_scene load_steps=6 format=3 uid="uid://sj6lkjotakf8"]

[ext_resource type="Script" uid="uid://dticv84bm3252" path="res://script/select_level.gd" id="1_8ebih"]
[ext_resource type="Texture2D" uid="uid://bxei8083yl6sj" path="res://sprite/menu/sb_select_level1.png" id="2_y0jeh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_div0t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rfwib"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nnhxp"]

[node name="select_level" type="Node2D"]
z_index = 600
position = Vector2(0, -14)
script = ExtResource("1_8ebih")

[node name="title" type="Label" parent="."]
offset_left = 613.0
offset_top = 34.0
offset_right = 1316.0
offset_bottom = 271.0
theme_override_font_sizes/font_size = 100
text = "Select Level"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="left_bt" type="Button" parent="."]
offset_left = 38.0
offset_top = 641.0
offset_right = 330.0
offset_bottom = 781.0
rotation = -1.5708
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_div0t")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_rfwib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nnhxp")
text = "▲"
metadata/_edit_use_anchors_ = true

[node name="right_bt" type="Button" parent="."]
offset_left = 1880.0
offset_top = 354.0
offset_right = 2172.0
offset_bottom = 494.0
rotation = 1.5708
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_div0t")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_rfwib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_nnhxp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nnhxp")
text = "▲"
metadata/_edit_use_anchors_ = true

[node name="sb_select_level1" type="Sprite2D" parent="."]
position = Vector2(960, 500)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_y0jeh")

[node name="1" type="Label" parent="sb_select_level1"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(1500, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="2" type="Label" parent="sb_select_level2"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "2"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level3" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="3" type="Label" parent="sb_select_level3"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level4" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="4" type="Label" parent="sb_select_level4"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "4"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level5" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="5" type="Label" parent="sb_select_level5"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level6" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="6" type="Label" parent="sb_select_level6"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "6"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level7" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="7" type="Label" parent="sb_select_level7"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "7"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level8" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="8" type="Label" parent="sb_select_level8"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "8"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level9" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="9" type="Label" parent="sb_select_level9"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "9"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level10" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="10" type="Label" parent="sb_select_level10"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "10"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level11" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="11" type="Label" parent="sb_select_level11"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "11"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level12" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="12" type="Label" parent="sb_select_level12"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "12"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level13" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="13" type="Label" parent="sb_select_level13"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "13"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level14" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="14" type="Label" parent="sb_select_level14"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "14"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level15" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="15" type="Label" parent="sb_select_level15"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "15"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level16" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="16" type="Label" parent="sb_select_level16"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "16"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level17" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="17" type="Label" parent="sb_select_level17"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "17"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level18" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2040, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="18" type="Label" parent="sb_select_level18"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "18"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level19" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-120, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="19" type="Label" parent="sb_select_level19"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "19"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sb_select_level20" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(420, 500)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_y0jeh")

[node name="20" type="Label" parent="sb_select_level20"]
offset_left = -1293.33
offset_top = -693.333
offset_right = 1255.67
offset_bottom = 668.667
theme_override_font_sizes/font_size = 1000
text = "20"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="level_num" type="Label" parent="."]
offset_left = 613.0
offset_top = 684.0
offset_right = 1316.0
offset_bottom = 921.0
theme_override_font_sizes/font_size = 100
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="play" type="Button" parent="."]
offset_left = 667.0
offset_top = 909.0
offset_right = 934.0
offset_bottom = 1029.0
theme_override_font_sizes/font_size = 50
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="back" type="Button" parent="."]
offset_left = 992.0
offset_top = 910.0
offset_right = 1259.0
offset_bottom = 1030.0
theme_override_font_sizes/font_size = 50
text = "Return"
metadata/_edit_use_anchors_ = true

[connection signal="button_up" from="left_bt" to="." method="_on_left_bt_button_up"]
[connection signal="button_up" from="right_bt" to="." method="_on_right_bt_button_up"]
[connection signal="button_up" from="play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="back" to="." method="_on_back_button_up"]
